<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/showMakesure"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#E0B9F1">
        <TextView
            android:id="@+id/makesure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/makesure"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#fff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/showInfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_below="@id/showMakesure"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/mksrTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mksrTitle"
            />
        <TextView
            android:id="@+id/mksrMdDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mksrMdDate"/>
        <TextView
            android:id="@+id/mksrContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mksrContent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/showInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:textColor="#fff"
            android:layout_marginStart="22dp"
            android:background="#E4E2E2"/>
        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/confirm"
            android:textSize="20dp"
            android:textColor="#fff"
            android:layout_marginStart="70dp"
            android:background="#B6D4F1"/>
    </LinearLayout>
</RelativeLayout>